test/files/neg/bug96.scala
class A {
    def foo(x: Any): Object = null;
}
class B extends A {
    override def foo(def x: Any): Object = null;
}
